[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/spritesheets/impale_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/weapons/Impale.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.138
height = 106.213

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 156, 35 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 35, 156, 35 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 70, 156, 35 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 105, 156, 35 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 140, 156, 35 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 175, 156, 35 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 210, 156, 35 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 245, 156, 35 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 280, 156, 35 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 315, 156, 35 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[node name="Impale" type="Area2D" groups=[
"treadmill",
]]
position = Vector2( 0, -4 )
monitorable = false
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 71.3183, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 85.3499, -0.445457 )
frames = SubResource( 12 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ExpiryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_ExpiryTimer_timeout"]
